--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tailwindcss/postcss": "^4.1.4",
+    "@vercel/analytics": "^1.5.0",
+    "dotenv": "^17.0.1",
     "emailjs-com": "^3.2.0",
     "lucide-react": "^0.503.0",
     "postcss": "^8.5.3",
